--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	background: rgb(229, 255, 157);
+	color: rgb(2, 1, 22);
+}
+
+ul {
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+}
+
+.user-container {
+	width: 90%;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 2rem 0;
+}
+.user-list {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	gap: 40px;
+}
+.user-item {
+	border: 3px solid rgb(6, 117, 48);
+	border-radius: 10px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 10px;
+}
+.action {
+	border: none;
+	align-self: flex-start;
+	color: #eee;
+	background: #079;
+	display: block;
+	padding: 10px 25px;
+	border-radius: 8px;
+	transition: background 0.3s linear;
+	cursor: pointer;
+}
+.action:hover {
+	background: rgb(2, 86, 109);
+}
+.title {
+	text-transform: uppercase;
+	color: rgb(6, 117, 48);
+	margin-bottom: 40px;
 }
